# study-gemini

./: .coveragerc  .gitignore  .tool-versions  README.md  agent_discovery.py  board_drawer.py  create_database.py  evaluate_models.py  fast_trainer.c  fast_trainer.pyx  game_info_ui.py  game_logic.py  generate_cui_screenshot.py  generate_screenshots.py  gui.py  main.py  perfect_moves.json  q_table.json  requirements.txt  settings_ui.py  setup.py  tictactoe.db  tictactoe_database.json  train_q_learning.py  verify_q_learning_strength.py
CUI/: client.py  cui_display.py  tic_tac_toe_client.py
agents/: base_agent.py  chatgpt_agent.py  database_agent.py  minimax_agent.py  perfect_agent.p  perfect_agent.py  q_learning_agent.py  random_agent.py
ble_client_microbit/: README.md  convert_webp.py  main.ts
ble_server/: game_adapter.py  main.py
microbit_basic/: README.md  ble_scanner_all.py  connet_microbit.py  micro_bit.js
processing/: README.md  TicTacToeClient.pde
rust/tic_tac_toe_server_rust/: Cargo.toml  README.md  openapi.json
rust/tic_tac_toe_server_rust/src/: agents.rs  game_logic.rs  lib.rs  main.rs  schemas.rs  server.rs
rust/tic_tac_toe_server_rust/tests/: agents_test.rs  game_logic_test.rs  schemas_test.rs  server_test.rs
server/: game_manager.py  schemas.py  server.py
tests/: conftest.py  test_agent_discovery.py  test_base_agent.py  test_board_drawer.py  test_chatgpt_agent.py  test_client.py  test_client_agent_discovery.py  test_create_database.py  test_cui_display.py  test_database_agent.py  test_game_info_ui.py  test_game_logic.py  test_game_manager.py  (+15 more)
(+33 files in other folders)
